@startuml

title __MOVES's Class Diagram__\n

  namespace  {
    namespace oves {
      class moves.BellyDrum {
          + BellyDrum()
          # applySelfEffects()
          # describe()
      }
    }
  }
  

  namespace  {
    namespace oves {
      class moves.DoubleSlap {
          + DoubleSlap()
          # calcCriticalHit()
          # describe()
      }
    }
  }
  

  namespace  {
    namespace oves {
      class moves.Facade {
          + Facade()
          # calcBaseDamage()
          # describe()
      }
    }
  }
  

  namespace  {
    namespace oves {
      class moves.HammerArm {
          {static} - decSp : Effect
          + HammerArm()
          # applySelfEffects()
          # describe()
      }
    }
  }
  

  namespace  {
    namespace oves {
      class moves.RockThrow {
          + RockThrow()
          # describe()
      }
    }
  }
  

  namespace  {
    namespace oves {
      class moves.SludgeBomb {
          {static} - poisonEff : Effect
          + SludgeBomb()
          # applyOppEffects()
          # describe()
      }
    }
  }
  

  namespace  {
    namespace oves {
      class moves.Swagger {
          ~ inc2Att : Effect
          + Swagger()
          # applyOppEffects()
          # describe()
      }
    }
  }
  

  namespace  {
    namespace oves {
      class moves.SweetScent {
          {static} - decEv : Effect
          + SweetScent()
          # applyOppEffects()
      }
    }
  }
  

  namespace  {
    namespace oves {
      class moves.WaterGun {
          + WaterGun()
          # describe()
      }
    }
  }
  

  namespace  {
    namespace oves {
      class moves.Withdraw {
          {static} - incDef : Effect
          + Withdraw()
          # applySelfEffects()
      }
    }
  }
  

  moves.BellyDrum -up-|> ru.ifmo.se.pokemon.SpecialMove
  moves.DoubleSlap -up-|> ru.ifmo.se.pokemon.PhysicalMove
  moves.Facade -up-|> ru.ifmo.se.pokemon.PhysicalMove
  moves.HammerArm -up-|> ru.ifmo.se.pokemon.PhysicalMove
  moves.RockThrow -up-|> ru.ifmo.se.pokemon.PhysicalMove
  moves.SludgeBomb -up-|> ru.ifmo.se.pokemon.SpecialMove
  moves.Swagger -up-|> ru.ifmo.se.pokemon.StatusMove
  moves.SweetScent -up-|> ru.ifmo.se.pokemon.StatusMove
  moves.WaterGun -up-|> ru.ifmo.se.pokemon.SpecialMove
  moves.Withdraw -up-|> ru.ifmo.se.pokemon.StatusMove


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
